--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -12,7 +12,7 @@
     &__slide {
         position: relative;
         max-height: 100vh;
-        min-height: 80vh;
+        // min-height: 80vh;
         img {
             max-width: 100%;
             height: auto;
@@ -24,19 +24,20 @@
         text-align: center;
         font-family: 'Unna', serif;
         color: $white;
-         @include fluidSize(20px, 60px);
+        width: 100%;
+         @include fluidSize(28px, 55px);
     }
 
     &__subtitle {
         font-size: .5em;
         position: relative;
         margin-bottom: 0;
-        &:after {
-            @include pseudoElement(200%, 2px, $white);
-            bottom: -.9em;
-            left: 50%;
-            transform: translateX(-50%);
-        }
+        // &:after {
+        //     @include pseudoElement(200%, 2px, $white);
+        //     bottom: -.9em;
+        //     left: 50%;
+        //     transform: translateX(-50%);
+        // }
     }
 
     &__title {
