--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -42,6 +42,9 @@
     &__links {
         @include flex(center, center);
         list-style-type: none;
+        @media (max-width: 760px) {
+            display: none;
+        }
         
     }
     &__link {
