--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -46,3 +46,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@mixin absolutePosition ($top, $left, $width:100%, $height:100%) {
+    position: absolute;
+    top: $top;
+    left: $left;
+    height: $height;
+    width: $width;
+}
