--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -44,12 +44,91 @@
         list-style-type: none;
         @media (max-width: 760px) {
             display: none;
+            &.open {
+                display:flex;
+            }
         }
         
+      
+      
     }
     &__link {
         margin-left: 1.7em;
         @include fluidSize(14px, 20px);
         
     }
-}
+    &__burger {
+        display: none;
+        position: relative;
+        @include absolutePosition(58px,
+        auto,
+        30px,
+        26px);
+        right: 25px;
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+        transform: rotate(0deg) translateY(-40%);
+        transition: .5s ease-in-out;
+        outline: none;
+        display: none;
+        &:hover {
+            cursor: pointer;
+        }
+        @media (max-width: 760px) {
+            display: block;
+        }
+        & span {
+            display: block;
+            @include absolutePosition(0,
+            0,
+            100%,
+            2px);
+            background: $white;
+            border-radius: 9px;
+            opacity: 1;
+            transform: rotate(0deg);
+            transition: .3s ease-in-out;
+            &:hover {
+                cursor: pointer;
+            }
+
+            &:nth-child(1) {
+                top: 0;
+            }
+
+            &:nth-child(2),
+            &:nth-child(3) {
+                top: 8px;
+            }
+
+            &:nth-child(4) {
+                top: 16px;
+            }
+        }
+
+        &.active {
+            & span:nth-child(1) {
+                top: 15px;
+                width: 0;
+                left: 50%;
+            }
+
+            & span:nth-child(2) {
+                transform: rotate(45deg);
+            }
+
+            & span:nth-child(3) {
+                transform: rotate(-45deg);
+            }
+
+            & span:nth-child(4) {
+                top: 15px;
+                width: 0;
+                left: 50%;
+            }
+        }
+    
+        }
+    }
+
