--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -10,8 +10,10 @@
     transform: translateX(-50%);
     width: 100vw;
     z-index: 1000;
+    padding-top: 0;
 
     color: $white;
+ 
     &__logo {
         @include fluidSize(20px, 40px);
         font-weight: bold;
@@ -135,6 +137,15 @@
             }
         }
     
+        }
+        &.black {
+            color: $lightBlack;
+            & .nav__top {
+                &:after {
+                   background-color: $lightGrey;
+                }
+                
+            }
         }
     }
 
