--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,10 @@ body {
 .main {
   @include container;
   padding: 12em 0 7em 0;
+  @media (max-width: 1100px) {
+    padding-top: 8em;
+    padding-bottom: 1em;
+  }
   &--home {
       padding-top: 0;
   }
