--- a/src/styles/services.module.scss
+++ b/src/styles/services.module.scss
@@ -27,11 +27,20 @@
         @media(max-width: 1100px) {
             max-width: 70%;
         }
+        @media (max-width: 750px){
+            max-width: 100%;
+            height: auto;
+           max-height: 300px;
+        }
     }
     &__content {
         @include sectionText;
         @include fluidSize(13px, 16px);
         padding: 0 10em 0 3.5em;
+        @media (max-width: 1100px){
+            padding: 0;
+            margin: 3em 0;
+        }
         
     }
 
@@ -57,10 +66,10 @@
             order: 1;
           
         }
-
-        // & .service__content {
-        //     padding: 0 5em 0 7em;
-        // }
+        & .service__content {
+            order: 2;
+            padding: 0;
+        }
     }
    }
 
