--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -65,18 +65,6 @@
 
     }
     & textarea {
-        background: transparent;
-        text-align: left;
-        border: none;
-        color: #e0cac0;
-        font-weight: 400;
-        resize: none;
-        font-size: 0;
-        outline: none;
-        display: block;
-        line-height: 1;
-        padding: 2px;
-        min-height: 1px;
-        border-bottom: 2px solid#D8D8D8;
+       height: 50px;
     }
 }
