add home to the nav

--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -146,6 +146,15 @@
                 }
                 
             }
+            & .nav__link {
+        
+                a {
+                    &.active {
+                        border-color: $lightBlack;
+                    }
+                }
+                
+            }
         }
     }
 
