create privacy-policy page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     background-color: $backgroundWhite;
     overflow-x: hidden;
+    color: $lightBlack;
 }
 
 .main {
