--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -13,6 +13,9 @@
     padding-top: 0;
 
     color: $white;
+    &.active {
+        background-color: rgba(0,0,0,.8);
+    }
  
     &__logo {
         @include fluidSize(20px, 40px);
@@ -38,6 +41,9 @@
         justify-content: space-between;
         @include fluidSize(5px, 10px);
         padding-top: 1em;
+        @media (max-width: 760px) {
+            flex-direction: column;
+        }
 
     }
 
@@ -46,8 +52,11 @@
         list-style-type: none;
         @media (max-width: 760px) {
             display: none;
+            margin-top: 10em;
             &.open {
                 display:flex;
+                flex-direction: column;
+                padding-left: 0;
             }
         }
         
@@ -62,6 +71,10 @@
                 padding: 5px;
                 border: 1px solid $white;
             }
+        }
+        @media (max-width: 760px) {
+           margin: 0 0 3em 0;
+           font-size: 4em;
         }
         
     }
@@ -139,6 +152,7 @@
     
         }
         &.black {
+            // @media(min-width: 768px){
             color: $lightBlack;
             & .nav__top {
                 &:after {
@@ -155,6 +169,24 @@
                 }
                 
             }
+
+            & .nav__burger {
+                & span {
+                    background: black;
+                }
+            }
+
+            &.active {
+                
+                    color: white;
+                    & .nav__burger {
+                        & span {
+                            background: $white;
+                        }
+                    }
+                
+            }
         }
+        // }
     }
 
