--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -36,7 +36,7 @@
         @media (max-width: 750px) {
             max-width: 90%;
             bottom: -20%;
-          
+
         }
     }
 
@@ -49,7 +49,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        
+
         margin-top: 2em;
 
         @media (max-width: 1170px) {
@@ -60,11 +60,11 @@
     & .service {
         width: 30%;
         margin: 0 .5em;
-       
+
 
         &__imgWrapper {
             overflow: hidden;
-       
+
         }
 
         & a {
@@ -87,7 +87,7 @@
                     width: 75px;
                     transition-delay: 0.4s;
                   }
-                  
+
             }
         }
 
@@ -119,11 +119,11 @@
             display: block;
             width: 0;
             border: none;
-            border-bottom: solid 2px $white;  
+            border-bottom: solid 2px $white;
             position: absolute;
             bottom:30%;
             left: 50%;
-            transform: translateX(-50%); 
+            transform: translateX(-50%);
             transition: all .5s;
           }
         }
@@ -153,7 +153,7 @@
         @media(max-width:750px) {
             width: 80%;
             &__img {
-                max-height: 300px;      
+                max-height: 300px;
             }
         }
 
@@ -171,15 +171,15 @@
 
     position: relative;
     &__imgWrapper {
-   
+
     }
     &__img {
         max-width: 65%;
-      
+
     }
 
     &__textBlock {
-       
+
         position: absolute;
         top: 50%;
         left: 50%;
@@ -215,7 +215,29 @@
         z-index: -1;
         @media (max-width: 750px) {
             max-width: 50%;
-          
+
         }
+    }
+}
+
+
+.modal {
+    max-width: 800px;
+    & img {
+        max-width: 250px;
+    }
+
+    &__container {
+        display: flex;
+        align-items: center;
+    }
+
+    &__textcontainer {
+        padding-left: 30px;
+    }
+
+    &__heading {
+        margin-bottom: 40px;
+        font-size: 25px;
     }
 }
